@@ -1,3 +1,8 @@
+Sep 27, 2007 - chris
+o fixed a bug in the freelist - the dirty-flag was not set, when an overflow
+    page was allocated; if the cache was exhausted, freelist pages could
+    get lost, and the file would grow very fast.
+
 Sep 24, 2007 - chris ---------------------------------------------------
                       release of hamsterdb-0.4.6
 
